# autoencoder-exp

./: .gitignore  main.py  pyproject.toml
scripts/: extract_uniform_frames.py  run_train_all_models.sh
src/: __init__.py  eval.py  train.py
src/configs/: eval.yaml  train.yaml
src/configs/callbacks/: default.yaml
src/configs/loggers/: _default.yaml  tensorboard.yaml
src/configs/model/: _default.yaml  deformable_detr_resnet50_autoencoder.yaml  dino_resnet50_autoencoder.yaml  dinov3_vitl16_sat_autoencoder.yaml  dinov3_vitl16_web_autoencoder.yaml  dinov3_vits16_web_autoencoder.yaml  groundingdino_swin_b_autoencoder.yaml  groundingdino_swin_t_autoencoder.yaml  sam31_autoencoder.yaml
src/configs/trainer/: default.yaml
src/models/: __init__.py  lightning_module.py
src/models/components/: deformable_detr_autoencoder.py  dino_autoencoder.py  dinov3_autoencoder.py  groundingdino_autoencoder.py  sam31_autoencoder.py
src/models/components/layers/: __init__.py  block.py  decoder.py  utils.py
src/models/components/losses/: __init__.py  reconstruction.py
src/models/components/metrics/: __init__.py  reconstruction.py
src/models/components/optim/: __init__.py  optimizer.py  scheduler.py
src/models/components/utils/: __init__.py  visualization.py
src/utils/: __init__.py  logger.py
